--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,6 @@ add_library(EDouble EDouble.cpp)
 add_library(LHCbStyle lhcbStyle.cpp)
 add_library(ClusterAlgorithms ClusterAlgorithms.cpp)
 add_library(cluster_lib Cluster.cpp)
+add_library(Calibration Calibration.cpp)
+
+target_link_libraries(Calibration ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} LHCbStyle -lSpectrum)
