--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,5 +8,5 @@ add_executable(produceCorrectedFile produceCorrectedFile.cpp)
 
 # Linker information
 target_link_libraries(clusterisation ${ROOT_LIBRARIES} cluster_lib ClusterAlgorithms Calibration)
-target_link_libraries(gains ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} LHCbStyle ${Boost_LIBRARIES} -lSpectrum)
+target_link_libraries(gains Calibration LHCbStyle ${Boost_LIBRARIES})
 target_link_libraries(produceCorrectedFile ${Boost_LIBRARIES} Calibration)
