--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,11 +5,10 @@ add_executable(clusterisation clusterisation.cpp)
 add_executable(gains gains.cpp)
 add_executable(produceCorrectedFile produceCorrectedFile.cpp)
 add_executable(clusterAnalysis clusterAnalysis.cpp)
-add_executable(convertSimOutput convertSimOutput.cpp)
+
 
 # Linker information
 target_link_libraries(clusterisation ${ROOT_LIBRARIES} cluster_lib ClusterAlgorithms Calibration)
 target_link_libraries(gains Calibration LHCbStyle ${Boost_LIBRARIES})
 target_link_libraries(produceCorrectedFile ${Boost_LIBRARIES} Calibration)
-target_link_libraries(clusterAnalysis ${Boost_LIBRARIES} ${ROOT_LIBRARIES} Calibration ClusterAlgorithms cluster_lib)
-target_link_libraries(convertSimOutput ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
+target_link_libraries(clusterAnalysis ${Boost_LIBRARIES} Calibration ClusterCreator ClusterMonitor cluster_lib)
