--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(attScan attScan.cpp)
 #target_link_libraries(clusterisation ${ROOT_LIBRARIES} Cluster ClusterAlgorithms Calibration)
 target_link_libraries(gains Calibration LHCbStyle ${Boost_LIBRARIES})
 target_link_libraries(produceCorrectedFile ${Boost_LIBRARIES} Calibration)
-target_link_libraries(clusterAnalysis ${Boost_LIBRARIES} Calibration ClusterCreator ClusterMonitor Cluster)
+target_link_libraries(clusterAnalysis ${Boost_LIBRARIES} Calibration ClusterCreator ClusterMonitor Cluster EDouble)
 target_link_libraries(attScan Calibration ClusterCreator Cluster LHCbStyle)
