Adapting CMakelist for lxplus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,16 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif()
 
+SITE_NAME(HOST)
+message("Running on " ${HOST})
+
+if(FIND HOST "lxplus")
+  message(STATUS "Setting boost path for lxplus")
+  set(BOOST_ROOT "/afs/cern.ch/sw/lcg/external/Boost/1.55.0_python2.7/x86_64-slc6-gcc47-opt")
+  set(BOOST_INCLUDE_DIRS "${BOOST_ROOT}/include")
+  set(BOOST_LIBRARY_DIRS "${BOOST_ROOT}/lib")
+endif()
+
 # Boost, a collection of useful C++ utilities and idioms
 find_package(Boost COMPONENTS
     program_options
