First prototype of cfg parser for testbeam geometry

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(Cluster Cluster.cpp)
 add_library(Calibration Calibration.cpp)
 add_library(ClusterCreator ClusterCreator.cpp)
 add_library(ClusterMonitor ClusterMonitor.cpp)
+add_library(ConfigParser ConfigParser.cpp)
 
 target_link_libraries(Calibration ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} LHCbStyle -lSpectrum)
 target_link_libraries(ClusterCreator Cluster)
