reimplementing alignment and cluster analysis

--- a/May_2016_setup.cfg
+++ b/May_2016_setup.cfg
@@ -1,12 +1,32 @@
+# This file defines the setupt of the may 2016 testbeam
+# each time a name is set the config file parser will add
+# a new fibre mat to the geometry
+#
+#
+# In the 2015 testbeam 4 fibre mats were tested:
+# HD2 Uplink 5 and 6
+# HD1 Uplink 7 and 8
+# CERN4 Uplink 1 and 2
+# SLAYER3(DUT) Uplink 3 and 4
+#
+# Though I ignore the HD1 mat
+#
+#
+# The z-possionts were
+# distance between modules in beam direction in the order HD2, Slayer, CERN
+# std::vector<double> zPositions = {0., 247.0 * 1000, 469.0 * 1000};
 name = HD2
 uplink_min = 5
 uplink_max = 6
+z_position = 0
 name = HD1
 uplink_min = 7
 uplink_max = 8
 name = CERN4
 uplink_min = 1
 uplink_max = 2
+z_position = 469000
 name = SLAYER3(DUT)
 uplink_min = 3
 uplink_max = 4
+z_position = 247000
