--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,9 @@ add_library(Calibration Calibration.cpp)
 add_library(ClusterCreator ClusterCreator.cpp)
 add_library(ClusterMonitor ClusterMonitor.cpp)
 add_library(ConfigParser ConfigParser.cpp)
+add_library(Alignment Alignment.cpp)
 
-target_link_libraries(Calibration ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} LHCbStyle -lSpectrum)
+target_link_libraries(Calibration ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} ConfigParser LHCbStyle -lSpectrum)
 target_link_libraries(ClusterCreator Cluster)
 target_link_libraries(ClusterMonitor ${ROOT_LIBRARIES} Cluster)
+target_link_libraries(Alignment ${ROOT_LIBRARIES} ConfigParser EDouble)
