--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(${SciFiTestbeamAndSimulation_SOURCE_DIR}/include)
 
+add_library(Alignment Alignment.cpp)
 add_library(Calibration Calibration.cpp)
 add_library(Channel Channel.cpp)
 add_library(Cluster Cluster.cpp)
@@ -9,7 +10,7 @@ add_library(ConfigParser ConfigParser.cpp)
 add_library(EDouble EDouble.cpp)
 add_library(LHCbStyle lhcbStyle.cpp)
 
-
+target_link_libraries(Alignment Cluster ConfigParser EDouble)
 target_link_libraries(Calibration Channel ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} LHCbStyle -lSpectrum)
 target_link_libraries(Cluster Channel)
 target_link_libraries(ClusterMonitor ${ROOT_LIBRARIES} Cluster)
