--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,3 +96,23 @@ add_subdirectory(src)
 add_subdirectory(main)
 
 message(STATUS ${Boost_INCLUDE_DIR})
+
+find_package(Doxygen)
+option(BUILD_DOCUMENTATION "Create and install the HTML based API documentation (requires Doxygen)" ${DOXYGEN_FOUND})
+
+if(BUILD_DOCUMENTATION)
+    if(NOT DOXYGEN_FOUND)
+         message(FATAL_ERROR "Doxygen is needed to build the documentation.")
+    endif()
+
+    set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/SciFiTestbeamAndSimulation_doxyfile)
+
+    message("Doxygen build started.")
+
+    add_custom_target(doc ALL
+                      COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile_in}
+                      COMMENT "Generating API documentation with Doxygen"
+                      VERBATIM)
+
+    #    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION     share/doc)
+endif()
